Creando un Menú Mobile FIrst

--- a/css/main.css
+++ b/css/main.css
@@ -255,12 +255,12 @@ div.main-menu {
 }
 
 div.logo {
-    width: 67%;
+    width: 85%;
+    float: left;
 }
 
 div.logo img {
     width: 100%;
-    float: left;
 }
 
 @media only screen and (min-width: 768px) {
@@ -272,19 +272,17 @@ div.logo img {
 
 /**Navegación Principal**/
 
-nav.main-navigation {
-    display: none;
-    width: 100%;
-}
-
 nav.main-navigation a {
     font-family: 'Oswald', sans-serif;
     color: #ffffff;
     font-size: 1.3em;
     text-transform: uppercase;
     text-decoration: none;
-    display: block;
     transition: all .5s ease;
+    width: 100%;
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 nav.main-navigation a:last-child {
@@ -314,6 +312,34 @@ nav.main-navigation a:hover {
         text-align: center;
         margin: 0 10px 0 0;
     }
+}
+
+
+/** Mobile Menu**/
+
+div.mobile-menu {
+    width: 60px;
+    display: block;
+    float: right;
+    text-align: right;
+    margin-top: 10px;
+}
+
+@media only screen and (min-width: 768px) {
+    div.mobile-menu {
+        display: none;
+    }
+}
+
+div.mobile-menu:hover {
+    cursor: pointer;
+}
+
+div.mobile-menu span {
+    height: 8px;
+    margin-bottom: 6px;
+    background-color: #ffffff;
+    display: block;
 }
 
 
