Creando descripción del evento y dando estilos

--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,10 @@ html {
 
 /** Globales **/
 
+p {
+    font-family: 'PT Sans', sans-serif;
+}
+
 h2 {
     font-family: 'Oswald', sans-serif;
 }
@@ -152,6 +156,31 @@ h2 {
     .container {
         max-width: 90%;
     }
+}
+
+.section {
+    padding: 30px 0;
+}
+
+h2 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.4em;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+h2::after {
+    content: '';
+    margin: 0 auto;
+    background-image: url(../img/separador.png);
+    height: 30px;
+    width: 100px;
+    display: block;
+}
+
+.section p {
+    font-size: 1.4em;
+    text-align: center;
 }
 
 
