--- a/css/main.css
+++ b/css/main.css
@@ -371,6 +371,9 @@ div.mobile-menu span {
     display: block;
 }
 
+
+/**Talleres**/
+
 section.programa {
     position: relative;
 }
@@ -406,8 +409,39 @@ div.programa-evento {
     }
 }
 
+nav.menu-programa {
+    width: 100%;
+    border-bottom: solid 1px #fe4918;
+    padding-bottom: 10px;
+}
 
-/**Talleres**/
+@media only screen and (min-width: 768px) {
+    nav.menu-programa {
+        display: table;
+    }
+}
+
+nav.menu-programa a {
+    display: block;
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    margin-bottom: 10px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.3em;
+}
+
+@media only screen and (min-width: 768px) {
+    nav.menu-programa a {
+        display: table-cell;
+    }
+}
+
+nav.menu-programa a i {
+    color: #fe4918;
+    margin-right: 10px;
+    font-size: 1.6em;
+}
 
 
 /* ==========================================================================
