--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,12 @@ h3 {
     transition: all .3s;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 .button:hover {
     background-color: #e33000;
 }
@@ -488,6 +494,63 @@ div.detalle-evento:nth-child(2) {
 div.detalle-evento p {
     margin-bottom: 20px;
     font-size: 20px;
+}
+
+
+/**Invitados**/
+
+ul.lista-invitados li {
+    padding: 10px;
+    float: left;
+}
+
+@media only screen and (min-width: 480px) {
+    ul.lista-invitados li {
+        width: 50%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    ul.lista-invitados li {
+        width: 33.3%;
+    }
+}
+
+div.invitado {
+    position: relative;
+    overflow: hidden;
+}
+
+div.invitado img {
+    max-width: 100%;
+    filter: grayscale();
+    -webkit-filter: grayscale(1);
+    transition: all .5s ease-in-out;
+}
+
+div.invitado:hover img {
+    -webkit-filter: grayscale(0);
+    -webkit-transform: scale(1.1);
+}
+
+div.invitado p {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 15px;
+    margin: 0;
+    background-color: rgba(0, 0, 0, .55);
+    width: 100%;
+    font-family: 'Oswald', sans-serif;
+    text-align: left;
+    text-transform: uppercase;
+    color: #fe4918;
+    transition: all .5s ease-in-out;
+}
+
+div.invitado:hover p {
+    bottom: -80px;
+    opacity: 0;
 }
 
 
