--- a/css/main.css
+++ b/css/main.css
@@ -556,12 +556,54 @@ div.invitado:hover p {
 
 /**Contador**/
 
+.parallax::before {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
 div.contador {
     position: relative;
+    height: auto;
 }
 
 div.contador::before {
-    background-image: url(../bg-resumen);
+    background-image: url(../img/bg-resumen.jpg);
+    content: '';
+}
+
+ul.resumen-evento {
+    position: relative;
+    padding: 120px 0;
+}
+
+ul.resumen-evento li {
+    width: 50%;
+    float: left;
+    text-align: center;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-family: 'Oswald', sans-serif;
+    font-size: 24px;
+}
+
+p.numero {
+    color: #fe4918;
+    font-size: 5em;
+    display: block;
+    margin: 0 0 10px 0;
+}
+
+@media only screen and (min-width: 768px) {
+    ul.resumen-evento li {
+        width: 25%;
+    }
 }
 
 
