Creando el HTML de la lista de precios

--- a/css/main.css
+++ b/css/main.css
@@ -566,6 +566,8 @@ div.invitado:hover p {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
+    -webkit-filter: brightness(.8);
+    filter: brightness(.8);
 }
 
 div.contador {
