--- a/css/main.css
+++ b/css/main.css
@@ -600,12 +600,53 @@ p.numero {
     font-size: 5em;
     display: block;
     margin: 0 0 10px 0;
+    font-family: 'Oswald', sans-serif;
 }
 
 @media only screen and (min-width: 768px) {
     ul.resumen-evento li {
         width: 25%;
     }
+}
+
+
+/**Lista de Precios**/
+
+ul.lista-precios>li {
+    padding: 10px;
+}
+
+@media only screen and (min-width: 768px) {
+    ul.lista-precios>li {
+        float: left;
+        width: 33.3%;
+    }
+}
+
+div.tabla-precios {
+    border: 1px solid #e1e1e1;
+    padding: 40px 0;
+    text-align: center;
+    background-color: #ffffff;
+}
+
+div.tabla-precios ul li {
+    font-family: 'PT Sans', sans-serif;
+    font-size: 16px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    color: #868686;
+    line-height: 26px;
+}
+
+div.tabla-precios h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+}
+
+div.tabla-precios p.numero {
+    color: #000000;
+    margin-top: 20px 0;
 }
 
 
