--- a/css/main.css
+++ b/css/main.css
@@ -201,6 +201,13 @@ h3 {
     margin-top: 20px;
     display: inline-block;
     transition: all .3s;
+    border: 2px solid #fe4918;
+}
+
+.button.hollow,
+.button.hollow:hover {
+    background-color: #ffffff;
+    color: #fe4918;
 }
 
 ul {
@@ -630,6 +637,13 @@ div.tabla-precios {
     background-color: #ffffff;
 }
 
+div.tabla-precios:hover {
+    transform: scale(1.1);
+    border: 1px solid #fe4918;
+    transition: all .5s ease-in-out;
+    box-shadow: 0px 0px 50px #666;
+}
+
 div.tabla-precios ul li {
     font-family: 'PT Sans', sans-serif;
     font-size: 16px;
@@ -639,9 +653,15 @@ div.tabla-precios ul li {
     line-height: 26px;
 }
 
+div.tabla-precios ul li i {
+    padding: 0 5px;
+    color: green;
+}
+
 div.tabla-precios h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
+    font-size: 24px;
 }
 
 div.tabla-precios p.numero {
