--- a/css/main.css
+++ b/css/main.css
@@ -670,6 +670,14 @@ div.tabla-precios p.numero {
 }
 
 
+/**Mapa**/
+
+div.mapa {
+    height: 420px;
+    background-color: green;
+}
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
