--- a/css/main.css
+++ b/css/main.css
@@ -715,9 +715,42 @@ blockquote p::before {
     position: absolute;
     font-size: 8rem;
     left: 16px;
-    top: 8px;
+    top: 0px;
     color: #fe4918;
     line-height: 1;
+    margin: 0;
+    padding: 0;
+}
+
+footer.info-testimonial {
+    padding: 0;
+}
+
+footer.info-testimonial img {
+    float: left;
+    border-radius: 50%;
+    width: 20%;
+    margin-left: 60px;
+}
+
+footer.info-testimonial cite {
+    font-family: 'PT Sans', sans-serif;
+    text-align: left;
+    color: #fe4918;
+    text-transform: uppercase;
+    font-size: 20px;
+    padding-top: 20px;
+    width: 66.6%;
+    float: right;
+    font-weight: bold;
+    font-style: normal;
+    padding-left: 10px;
+}
+
+footer.info-testimonial cite span {
+    color: black;
+    display: block;
+    text-transform: none;
 }
 
 
