--- a/css/main.css
+++ b/css/main.css
@@ -795,6 +795,23 @@ div.newsletter .contenido h3 {
 }
 
 
+/**Cuenta Regresiva**/
+
+div.cuenta-regresiva ul li {
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+    div.cuenta-regresiva ul li {
+        width: 25%;
+        float: left;
+    }
+}
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
