--- a/css/main.css
+++ b/css/main.css
@@ -812,6 +812,55 @@ div.cuenta-regresiva ul li {
 }
 
 
+/**Footer**/
+
+footer {
+    background-color: #353535;
+    padding-top: 40px;
+    margin-top: 20px;
+}
+
+footer .contenedor>div {
+    padding: 0 20px;
+    color: #ffffff;
+}
+
+@media only screen and (min-width: 768px) {
+    footer .contenedor>div {
+        width: 33.3%;
+        float: left;
+    }
+}
+
+footer h3 {
+    color: #ffffff;
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+    margin-bottom: 20px;
+}
+
+footer span {
+    color: #fe4918;
+}
+
+footer .ultimos-tweets li {
+    margin-bottom: 10px;
+}
+
+footer nav.redes-sociales {
+    text-align: left;
+}
+
+p.copyright {
+    background-color: #2e2e2e;
+    color: #ffffff;
+    padding: 10px;
+    margin: 0;
+    text-align: center;
+    font-size: 1.3em;
+}
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
