--- a/css/main.css
+++ b/css/main.css
@@ -731,32 +731,32 @@ blockquote p::before {
     padding: 0;
 }
 
-footer.info-testimonial {
+div.info-testimonial {
     padding: 0;
 }
 
-footer.info-testimonial img {
+div.info-testimonial img {
     float: left;
     border-radius: 50%;
-    width: 20%;
-    margin-left: 60px;
+    width: 22%;
+    margin-left: 40px;
 }
 
-footer.info-testimonial cite {
+div.info-testimonial cite {
     font-family: 'PT Sans', sans-serif;
     text-align: left;
     color: #fe4918;
     text-transform: uppercase;
     font-size: 20px;
     padding-top: 20px;
-    width: 66.6%;
+    width: 66%;
     float: right;
     font-weight: bold;
     font-style: normal;
-    padding-left: 10px;
+    padding-left: 20px;
 }
 
-footer.info-testimonial cite span {
+div.info-testimonial cite span {
     color: black;
     display: block;
     text-transform: none;
