--- a/css/main.css
+++ b/css/main.css
@@ -945,6 +945,49 @@ div.paquetes .tabla-precios {
 }
 
 
+/* Resumen Registro*/
+
+.resumen p {
+    font-size: 1.2em;
+    text-transform: uppercase;
+}
+
+.extras .orden label {
+    font-size: 1.5em;
+}
+
+.resumen .extras {
+    float: left;
+    width: 50%;
+    padding: 30px;
+}
+
+.extras .orden {
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.extras .orden input {
+    margin: 10px 0 0 0;
+}
+
+.total {
+    float: right;
+    width: 50%;
+    padding: 30px;
+}
+
+.resumen input {
+    display: block;
+    margin: 10px auto;
+}
+
+.orden select {
+    font-size: 1.2em;
+    display: block;
+}
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
