--- a/css/main.css
+++ b/css/main.css
@@ -917,6 +917,7 @@ div.paquetes .tabla-precios {
 
 .contenido-dia {
     padding: 20px;
+    display: none;
 }
 
 @media only screen and (min-width: 768px) {
@@ -987,6 +988,7 @@ div.paquetes .tabla-precios {
     font-weight: bold;
     padding: 20px;
     display: none;
+    text-align: center;
 }
 
 #suma-total {
