Cambiando estilos en el menú programa

--- a/css/main.css
+++ b/css/main.css
@@ -461,8 +461,6 @@ div.programa-evento {
 
 nav.menu-programa {
     width: 100%;
-    border-bottom: solid 1px #fe4918;
-    padding-bottom: 10px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -479,6 +477,24 @@ nav.menu-programa a {
     margin-bottom: 10px;
     font-family: 'Oswald', sans-serif;
     font-size: 1.3em;
+    position: relative;
+    padding-bottom: 10px;
+    border-bottom: solid 1px #fe4918;
+}
+
+nav.menu-programa a.activo::after {
+    position: absolute;
+    content: '';
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    height: 30px;
+    width: 30px;
+    background-image: url(../img/talleres-flecha.jpg);
+    background-position: top center;
+    background-repeat: no-repeat;
+    bottom: -30px;
 }
 
 @media only screen and (min-width: 768px) {
