Animando menú móvil

--- a/css/main.css
+++ b/css/main.css
@@ -410,6 +410,11 @@ div.logo img {
 
 /**Navegación Principal**/
 
+.navegacion-principal {
+    display: none;
+    width: 100%;
+}
+
 nav.navegacion-principal a {
     font-family: 'Oswald', sans-serif;
     color: #ffffff;
