cambios en elc alendario

--- a/css/main.css
+++ b/css/main.css
@@ -1098,6 +1098,19 @@ div.paquetes .tabla-precios {
 }
 
 
+/** Calendario **/
+
+div.calendario::after {
+    clear: both;
+    display: block;
+    content: '';
+}
+
+h2.asd {
+    background-color: red;
+}
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
